--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,15 @@
 @tailwind components;
 @tailwind utilities;
 
+
+@layer base {
+  html, body {
+      @apply bg-white text-black dark:bg-black dark:text-white overflow-x-hidden;
+  }
+}
+
+
+
 @layer components {
   .primary-btn {
     @apply bg-gradient-to-r from-primary to-secondary duration-300 py-2 px-6 text-white rounded-full hover:scale-105;
